dynamically render product quantity selector

--- a/amazon.html
+++ b/amazon.html
@@ -75,20 +75,8 @@
             $10.90
           </div>
 
-          <div class="product-quantity-container">
-            <select>
-              <option selected value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
-              <option value="5">5</option>
-              <option value="6">6</option>
-              <option value="7">7</option>
-              <option value="8">8</option>
-              <option value="9">9</option>
-              <option value="10">10</option>
-            </select>
-          </div>
+          
+          
 
           <div class="product-spacer"></div>
 
@@ -122,21 +110,6 @@
 
           <div class="product-price">
             $20.95
-          </div>
-
-          <div class="product-quantity-container">
-            <select>
-              <option selected value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
-              <option value="5">5</option>
-              <option value="6">6</option>
-              <option value="7">7</option>
-              <option value="8">8</option>
-              <option value="9">9</option>
-              <option value="10">10</option>
-            </select>
           </div>
 
           <div class="product-spacer"></div>
@@ -173,21 +146,6 @@
             $7.99
           </div>
 
-          <div class="product-quantity-container">
-            <select>
-              <option selected value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
-              <option value="5">5</option>
-              <option value="6">6</option>
-              <option value="7">7</option>
-              <option value="8">8</option>
-              <option value="9">9</option>
-              <option value="10">10</option>
-            </select>
-          </div>
-
           <div class="product-spacer"></div>
 
           <div class="added-to-cart">
@@ -201,5 +159,7 @@
         </div>
       </div>
     </div>
+
+    <script src="scripts/amazon.js"></script>
   </body>
 </html>
